<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context="com.nihatalim.genericrecycler.activities.MainActivity">

    <Button
        android:id="@+id/btnVertical"
        android:text="@string/activity_verticalrecycler"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnHorizontal"
        android:text="@string/activity_horizontalrecycler"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnGrid"
        android:text="@string/activity_gridrecycler"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnStaggeredGrid"
        android:text="@string/activity_staggeredgridrecycler"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btnPaginationVertical"
        android:text="@string/activity_paginationrecycler"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>
